--- a/AEAssist/AEAssist.csproj
+++ b/AEAssist/AEAssist.csproj
@@ -471,6 +471,7 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <Compile Include="AI\Scholar\Ability\Scholar_Aetherflow.cs" />
     <Compile Include="AI\Scholar\Ability\Scholar_Dissipation.cs" />
     <Compile Include="AI\Scholar\Ability\Scholar_LucidDreaming.cs" />
+    <Compile Include="AI\Scholar\Ability\Scholar_Protraction.cs" />
     <Compile Include="AI\Scholar\GCD\ScholarGCD_SummonEos.cs" />
     <Compile Include="AI\Scholar\GCD\ScholarGCD_Dot.cs" />
     <Compile Include="AI\Scholar\GCD\ScholarGCD_Base.cs" />
