--- a/AEAssist/AEAssist.csproj
+++ b/AEAssist/AEAssist.csproj
@@ -258,6 +258,7 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <Compile Include="AI\BlackMage\SpellQueue\SpellQueueSlot_Thunder.cs" />
     <Compile Include="AI\BlackMage\SpellQueue\SpellQueueSlot_Xenoglossy.cs" />
     <Compile Include="AI\BlackMage\SpellQueue\SpellQueue_DespairCombo.cs" />
+    <Compile Include="AI\Dancer\Ability\DancerAbility_CuringWaltz.cs" />
     <Compile Include="AI\Dancer\Ability\DancerAbility_Devilment.cs" />
     <Compile Include="AI\Dancer\Ability\DancerAbility_FanDance.cs" />
     <Compile Include="AI\Dancer\Ability\DancerAbility_FanDance3.cs" />
@@ -465,6 +466,7 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <Compile Include="AI\Samurai\SpellQueue\SpellQueueSlot_KaeshiSetsugekka.cs" />
     <Compile Include="AI\Samurai\SpellQueue\SpellQueue_OgiNamikiriCombo.cs" />
     <Compile Include="AI\Samurai\SpellQueue\SpellQueue_SetsugekkaCombo.cs" />
+    <Compile Include="AI\Scholar\Ability\Scholar_Aetherpact.cs" />
     <Compile Include="AI\Scholar\Ability\Scholar_ChainStratagem.cs" />
     <Compile Include="AI\Scholar\Ability\Scholar_EnergyDrain2.cs" />
     <Compile Include="AI\Scholar\Ability\Scholar_Aetherflow.cs" />
