--- a/AEAssist/AEAssist.csproj
+++ b/AEAssist/AEAssist.csproj
@@ -425,28 +425,11 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <Compile Include="AI\Sage\SageSpellHelper.cs" />
     <Compile Include="AI\Sage\Sage_AIPriorityQueue.cs" />
     <Compile Include="AI\Sage\SpellEvent\SpellEventDot.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_Hagakure.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_HissatsuGuren.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_HissatsuGyoten.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_HissatsuKyuten.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_HissatsuYaten.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_KaeshiGoken.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_KaeshiHiganbana.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_KaeshiNamikiri.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_Meditate.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_ShohaII.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_ThirdEye.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_TsubameGaeshi.cs" />
-    <Compile Include="AI\Samurai\GCD\SamuraiGCD_AoERotations.cs" />
-    <Compile Include="AI\Samurai\GCD\SamuraiGCD_CoolDownPhase.cs" />
+    <Compile Include="AI\Samurai\Ability\SamuraiAbility_HissatsuShinten.cs" />
+    <Compile Include="AI\Samurai\Ability\SamuraiAbility_MeikyoShisui.cs" />
+    <Compile Include="AI\Samurai\GCD\SamuraiGCD_Base.cs" />
     <Compile Include="AI\Samurai\GCD\SamuraiGCD_Dot.cs" />
-    <Compile Include="AI\Samurai\GCD\SamuraiGCD_EvenMinutesBurst.cs" />
-    <Compile Include="AI\Samurai\GCD\SamuraiGCD_Fillers.cs" />
-    <Compile Include="AI\Samurai\GCD\SamuraiGCD_Higanbana.cs" />
     <Compile Include="AI\Samurai\GCD\SamuraiGCD_KaeshiSetsugekka.cs" />
-    <Compile Include="AI\Samurai\GCD\SamuraiGCD_MidareSetsugekka.cs" />
-    <Compile Include="AI\Samurai\GCD\SamuraiGCD_OddMinuteBurst.cs" />
-    <Compile Include="AI\Samurai\GCD\SamuraiGCD_OgiNamikiriCombo.cs" />
     <Compile Include="AI\Samurai\SamuraiCombatMessageStrategy.cs" />
     <Compile Include="AI\Samurai\Opener_SamuraiStandard_90.cs" />
     <Compile Include="AI\Samurai\SpellEvent\SpellEvent_GCD.cs" />
@@ -505,12 +488,6 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <Compile Include="AI\Reaper\Reaper_AIPriorityQueue.cs" />
     <Compile Include="AI\Reaper\ReaperBattleData.cs" />
     <Compile Include="AI\Reaper\ReaperSpellHelper.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_HissatsuKaiten.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_HissatsuSenei.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_HissatsuShinten.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_Ikishoten.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_MeikyoShisui.cs" />
-    <Compile Include="AI\Samurai\Ability\SamuraiAbility_Shoha.cs" />
     <Compile Include="AI\Samurai\SamuraiBattleData.cs" />
     <Compile Include="AI\Samurai\SamuraiRotation.cs" />
     <Compile Include="AI\Samurai\SamuraiSpellHelper.cs" />
